# ai-api

./: .gitignore  Cargo.toml  README.md  config.toml  config.toml.example  users.csv
src/: main.rs
src/config/: mod.rs
src/db/: README.md  log.rs  mod.rs  student.rs  test.rs
src/handler/: chat.rs  draw.rs  mod.rs  test.rs  token.rs  translate.rs  utils.rs  wolfram.rs
src/openai/: chat.rs  draw.rs  error.rs  mod.rs  test.rs
src/translate/: mod.rs  test.rs
src/wolfram/: mod.rs  test.rs
