[package]
name = "ai-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.26.0", features = ["full"] }
http = "0.2.9"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
serde_urlencoded = "0.7.0"
url = "2.2.2"
log = "0.4.14"
env_logger = "0.10.0"
futures = "0.3.17"
futures-util = "0.3.17"
futures-executor = "0.3.17"
rusqlite = "0.28.0"
clap-v3 = "3.0.0-beta.1"
