[package]
name = "ai-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1.26.0", features = ["full"] }
http = "0.2.9"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
serde_urlencoded = "0.7.0"
url = "2.2.2"
log = "0.4.14"
env_logger = "0.10.0"
futures = "0.3.17"
futures-util = "0.3.17"
futures-executor = "0.3.17"
clap-v3 = "3.0.0-beta.1"
sha2 = "0.10.6"
toml = "0.7.3"
csv = "1.2.1"
mongodb = "2.4.0"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
html = "0.1.1"
once_cell = "1.17.1"
rand = "0.8.5"
md5 = "0.7.0"
